--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,7 @@
     .container { max-width: 800px; margin: 0 auto; }
     .card { background: #162440; padding: 20px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.1); margin-bottom: 20px; }
     h1, h2 { margin-top: 0; }
+    
     input[type="text"], input[type="password"], select, textarea { width: 100%; padding: 12px; border-radius: 8px; border: 1px solid #2d7dff; background: #070c18; color: white; margin-bottom: 15px; box-sizing: border-box; }
     textarea { min-height: 100px; resize: vertical; }
     button { cursor: pointer; background: #2d7dff; color: white; border: none; padding: 10px 16px; border-radius: 8px; font-weight: bold; font-size: 14px; margin-right: 5px; }
@@ -28,6 +29,12 @@
     .details p { margin: 0; font-size: 13px; color: #a9b6db; }
     .badge { background: rgba(255,255,255,0.1); padding: 4px 8px; border-radius: 4px; font-size: 11px; margin-right: 5px; }
     #dashboard { display: none; }
+
+    /* SEZIONI ESPANDIBILI (NUOVO) */
+    .section-header { display: flex; justify-content: space-between; align-items: center; cursor: pointer; padding-bottom: 5px; }
+    .section-header h2 { margin: 0; font-size: 20px; }
+    .section-icon { font-size: 14px; transition: transform 0.3s ease; opacity: 0.8; }
+    .section-content { margin-top: 15px; display: none; } /* Nascoste di default */
 
     /* STILI PER I FILTRI DELLE CATEGORIE */
     .filters { display: flex; gap: 8px; flex-wrap: wrap; margin-bottom: 15px; }
@@ -66,15 +73,25 @@
     </div>
 
     <div class="card">
-      <h2>Luoghi e Recensioni ⭐</h2>
-      <div id="luoghiFilters" class="filters"></div>
-      <div id="luoghiList">Caricamento...</div>
+      <div class="section-header" onclick="toggleSection('luoghiSection', 'luoghiIcon')">
+        <h2>Luoghi e Recensioni ⭐</h2>
+        <span id="luoghiIcon" class="section-icon">▼</span>
+      </div>
+      <div id="luoghiSection" class="section-content">
+        <div id="luoghiFilters" class="filters"></div>
+        <div id="luoghiList">Caricamento...</div>
+      </div>
     </div>
 
     <div class="card">
-      <h2>Segnalazioni Utenti 📍</h2>
-      <div id="segnalazioniFilters" class="filters"></div>
-      <div id="segnalazioniList">Caricamento...</div>
+      <div class="section-header" onclick="toggleSection('segnalazioniSection', 'segnalazioniIcon')">
+        <h2>Segnalazioni Utenti 📍</h2>
+        <span id="segnalazioniIcon" class="section-icon">▼</span>
+      </div>
+      <div id="segnalazioniSection" class="section-content">
+        <div id="segnalazioniFilters" class="filters"></div>
+        <div id="segnalazioniList">Caricamento...</div>
+      </div>
     </div>
   </div>
 </div>
@@ -122,6 +139,19 @@
     }, { once: true });
   });
 
+  // Funzione per Aprire/Chiudere le Sezioni
+  function toggleSection(sectionId, iconId) {
+    const section = document.getElementById(sectionId);
+    const icon = document.getElementById(iconId);
+    if (section.style.display === "block") {
+      section.style.display = "none";
+      icon.style.transform = "rotate(0deg)";
+    } else {
+      section.style.display = "block";
+      icon.style.transform = "rotate(180deg)";
+    }
+  }
+
   // =========================
   // LOGICA PANNELLO ADMIN
   // =========================
@@ -142,6 +172,11 @@
     apiKey = input;
     document.getElementById("loginBox").style.display = "none";
     document.getElementById("dashboard").style.display = "block";
+    
+    // Apri automaticamente la prima sezione per far capire come funziona
+    document.getElementById("luoghiSection").style.display = "block";
+    document.getElementById("luoghiIcon").style.transform = "rotate(180deg)";
+
     loadData();
   }
 
@@ -182,7 +217,6 @@
 
     container.innerHTML = categorieUniche.map(cat => {
       const activeClass = (cat === currentFilter) ? "active" : "";
-      // Usiamo una funzione per cambiare filtro al click
       return `<button class="filter-btn ${activeClass}" onclick="setFilter('${type}', '${cat.replace(/'/g, "\\'")}')">${cat}</button>`;
     }).join('');
   }
@@ -251,7 +285,6 @@
       });
       const result = await res.json();
       if (result.ok) {
-        // Rimuovilo dai dati locali e aggiorna la vista per mantenere il filtro
         allData[type] = allData[type].filter(i => i.id !== id);
         renderFilters(type);
         updateListView(type);
