--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <div class="logo"></div>
         <div><div class="title">Segnala Facile</div></div>
       </div>
-      <button class="pill" id="installPill" style="display:none; cursor:pointer;" type="button">⬇️ Installa</button>
+      <button class="pill" id="installPill" style="display:inline-flex; cursor:pointer; background: #19c37d; color: white; border: none;" type="button">⬇️ Installa App</button>
     </header>
 
     <div id="banner" class="banner hidden" role="status" aria-live="polite">
