--- a/index.html
+++ b/index.html
@@ -323,6 +323,15 @@
       .row{ flex-wrap:wrap; }
       .row > .btn{ flex:1 1 100%; }
     }
+
+    /* FILTRI MAPPA */
+    .filters { display: flex; gap: 8px; flex-wrap: wrap; margin-bottom: 12px; }
+    .filter-btn { 
+      background: rgba(255,255,255,0.06); color: var(--text); border: 1px solid var(--stroke); 
+      padding: 8px 14px; border-radius: 20px; font-size: 13px; font-weight: 800; cursor: pointer; transition: 0.2s ease; 
+    }
+    .filter-btn:hover { background: rgba(255,255,255,0.12); }
+    .filter-btn.active { background: var(--accent); color: #fff; border-color: var(--accent); box-shadow: 0 4px 10px rgba(45,125,255,0.3); }
   </style>
 </head>
 
