--- a/index.html
+++ b/index.html
@@ -380,7 +380,8 @@
           <a class="btn small ghost" href="#/map">Mappa →</a>
         </div>
 
-        <div class="mapShell" style="margin-top:14px">
+        <div id="mapFiltersHome" class="filters" style="margin-top:14px;"></div>
+        <div class="mapShell">
           <div id="mapHome" class="mapBox"></div>
         </div>
       </div>
