--- a/index.html
+++ b/index.html
@@ -605,8 +605,9 @@
           </div>
           <button class="btn small ghost" onclick="fetchPublicData()" type="button">🔄 Sincronizza</button>
         </div>
-        <div class="mapShell" style="margin-top:14px">
-          <div class="mapTopBar">
+        <div id="mapFiltersMain" class="filters" style="margin-top:14px;"></div>
+        <div class="mapShell">
+          <div class="mapTopBar">>
             <div>
               <div class="mapTitle">Tutti i punti</div>
             </div>
