--- a/index.html
+++ b/index.html
@@ -1003,10 +1003,12 @@
       return new Promise((resolve) => {
         const i = new Image(); i.onload = () => {
           const cvs = document.createElement("canvas");
-          const r = Math.min(1, 1400 / Math.max(i.width, i.height));
+          // Ridotto da 1400 a 800px massimi per non pesare su R2!
+          const r = Math.min(1, 800 / Math.max(i.width, i.height));
           cvs.width = i.width*r; cvs.height = i.height*r;
           cvs.getContext("2d").drawImage(i, 0, 0, cvs.width, cvs.height);
-          resolve(cvs.toDataURL("image/jpeg", 0.8));
+          // Qualità JPEG abbassata al 65% (invisibile a occhio nudo ma fa miracoli sul peso)
+          resolve(cvs.toDataURL("image/jpeg", 0.65)); 
         };
         i.src = URL.createObjectURL(file);
       });
