--- a/admin.html
+++ b/admin.html
@@ -7,8 +7,8 @@
   <title>Pannello Amministratore</title>
   
   <link rel="manifest" href="admin.webmanifest" />
-  <link rel="icon" href="icons/icon-192.png" />
-  <link rel="apple-touch-icon" href="icons/icon-192.png" />
+  <link rel="icon" href="icons/admin-192.png" />
+  <link rel="apple-touch-icon" href="icons/admin-192.png" />
 
   <style>
     body { font-family: system-ui, sans-serif; background: #0b1220; color: #eaf0ff; margin: 0; padding: 20px; }
