--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#0b1220" />
   <title>Pannello Amministratore</title>
   
-  <link rel="manifest" href="admin.webmanifest" />
+  <link rel="manifest" href="admin.webmanifest?v=2" />
   <link rel="icon" href="icons/admin-192.png" />
   <link rel="apple-touch-icon" href="icons/admin-192.png" />
 
