--- a/index.html
+++ b/index.html
@@ -733,6 +733,15 @@
       altro:   { color: '#2d7dff', emoji: '❓' } 
     };
 
+    // NUOVO: Mappatura EMOJI per i Luoghi recensiti
+    const placeCatInfo = {
+      ristorante: { color: '#e74c3c', emoji: '🍕' },
+      negozio:    { color: '#9b59b6', emoji: '🛍️' },
+      cultura:    { color: '#f39c12', emoji: '🏛️' },
+      natura:     { color: '#2ecc71', emoji: '🌲' },
+      altro:      { color: '#ff9f43', emoji: '⭐' }
+    };
+
     // =========================
     // INDEXEDDB - Gestione Memoria Locale
     // =========================
