--- a/index.html
+++ b/index.html
@@ -503,8 +503,8 @@
           <option value="ristorante">🍕 Ristorante</option>
           <option value="bar">🍺 Bar</option>
           <option value="negozio">🛍️ Negozio</option>
-          <option value="cultura">🏛️ Cultura</option>
-          <option value="monumento">⭐ Monumento</option>
+          <option value="cultura">📚 Cultura</option>
+          <option value="monumento">🏛️ Monumento</option>
           <option value="parco">🌲 Parco</option>
           <option value="natura">☘️ Natura</option>
         </select>
@@ -581,10 +581,10 @@
               <optgroup label="⭐ Luoghi e Recensioni">
                 <option value="ristorante">🍕 Ristoranti</option>
                 <option value="bar">🍺 Bar</option>
-                <option value="negozi">🛍️ Negozi</option>
+                <option value="negozio">🛍️ Negozio</option>
                 <option value="cultura">📚 Cultura</option>
-                <option value="monumenti">🏛️ Monumenti</option>
-                <option value="parchi">🌳 Parchi</option>
+                <option value="monumento">🏛️ Monumento</option>
+                <option value="parcho">🌳 Parcho</option>
                 <option value="natura">☘️ Natura</option>
               </optgroup>
               <option value="altro">❓ Altro</option>
@@ -685,7 +685,7 @@
       bar:        { color: '#e74c3c', emoji: '🍺' },
       negozio:    { color: '#9b59b6', emoji: '🛍️' },
       cultura:    { color: '#f39c12', emoji: '📚' },
-      monumenti:  { color: '#f39c12', emoji: '🏛️' },
+      monumento:  { color: '#f39c12', emoji: '🏛️' },
       natura:     { color: '#2ecc71', emoji: '☘️' },
       parco:      { color: '#2ecc71', emoji: '🌳' },
       altro:      { color: '#ff9f43', emoji: '⭐' }
