--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <meta name="theme-color" content="#0b1220" />
-  <title>SegnalaFacile Pro</title>
+  <title>Segnala Facile</title>
 
   <link rel="manifest" href="manifest.webmanifest?v=2" />
   <link rel="icon" href="icons/icon-192.png" />
