--- a/index.html
+++ b/index.html
@@ -581,10 +581,10 @@
               <optgroup label="⭐ Luoghi e Recensioni">
                 <option value="ristorante">🍕 Ristoranti</option>
                 <option value="bar">🍺 Bar</option>
-                <option value="negozio">🛍️ Negozio</option>
+                <option value="negozio">🛍️ Negozi</option>
                 <option value="cultura">📚 Cultura</option>
-                <option value="monumento">🏛️ Monumento</option>
-                <option value="parcho">🌳 Parcho</option>
+                <option value="monumento">🏛️ Monumenti</option>
+                <option value="parcho">🌳 Parchi</option>
                 <option value="natura">☘️ Natura</option>
               </optgroup>
               <option value="altro">❓ Altro</option>
