--- a/index.html
+++ b/index.html
@@ -73,11 +73,18 @@
 
     .heroTop{ display:flex; align-items:flex-start; justify-content:space-between; gap:12px; flex-wrap:wrap; }
     .heroCover{
-      width: 100%; height: 180px; object-fit: cover; border-radius: 24px;
-      border: 1px solid rgba(255,255,255,.12); box-shadow: 0 18px 45px rgba(0,0,0,.38);
-      display: block; margin: 14px 0 16px; filter: saturate(1.05) contrast(1.02);
+      width: 100%; 
+      height: auto; 
+      max-height: 350px; 
+      object-fit: contain; 
+      border-radius: 24px;
+      border: 1px solid rgba(255,255,255,.12); 
+      box-shadow: 0 18px 45px rgba(0,0,0,.38);
+      display: block; 
+      margin: 14px 0 16px; 
+      filter: saturate(1.05) contrast(1.02);
+      background: rgba(0,0,0,0.2);
     }
-    @media (min-width: 520px){ .heroCover{ height: 210px; } }
     .hero h1{ margin:0 0 10px; font-size: 34px; line-height: 1.08; letter-spacing: -.7px; }
     .hero p{ margin:0; color: var(--muted); font-size: 15px; line-height: 1.55; max-width: 62ch; }
 
